Mobile Version completed

--- a/location.html
+++ b/location.html
@@ -29,13 +29,13 @@
         </picture>
       </p>
     </div>
-    <div class="location__target">
+    <!-- <div class="location__target">
       <p>
         <picture>
           <img src="./assets/icon-location.svg" alt="">
         </picture>
       </p>
-    </div>
+    </div> -->
   </header>
 
   <div class="address">
@@ -46,13 +46,13 @@
       <span>RI 02840</span>
       <span>United States of America</span>
     </p>
-    <p class="text address--text">
+    <p class="text address--content">
       Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free
       to all visitors and open seven days a week from 8am to 9pm.
     </p>
   </div>
 
-  <footer class="footer footer-light">
+  <footer class="footer bg-accent">
     <h3 class="title footer--title">Modern Art Gallery</h3>
     <p class="text footer--text">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to
       9pm. Find us at 99 King Street, Newport, USA</p>
