Responsive Mobile - Tablet (Finished)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>
         <picture>
           <source srcset="./assets/mobile/image-hero.jpg" type="image/jpg" media="all and (max-width:376px)" />
-          <source srcset="./assets/mobile/image-hero@2x.jpg" type="image/jpg" media="all and (max-width:751px)" />
+          <source srcset="./assets/mobile/image-hero@2x.jpg" type="image/jpg" media="all and (max-width:550px)" />
           <img src="./assets/desktop/image-hero@2x.jpg" alt="">
         </picture>
       </p>
@@ -61,9 +61,9 @@
     <div class="gallery__img-box gallery__img-box--3">
       <p>
         <picture>
-          <source srcset="./assets/mobile/image-grid-3.jpg" type="image/jpg" media="all and (max-width: 345px)">
-          <source srcset="./assets/mobile/image-grid-3@2x.jpg" type="image/jpg" media="all and (max-width: 600px)">
-          <source srcset="./assets/desktop/image-grid-3.jpg" type="image/jpg" media="all and (max-width: 800px)">
+          <source srcset="./assets/mobile/image-grid-3.jpg" type="image/jpg" media="all and (max-width: 550px)">
+          <source srcset="./assets/tablet/image-grid-3@2x.jpg" type="image/jpg" media="all and (min-width: 551px)">
+          <source srcset="./assets/desktop/image-grid-3@2x.jpg" type="image/jpg" media="all and (min-width: 1100px)">
           <img src="./assets/desktop/image-grid-3@2x.jpg" alt="">
         </picture>
       </p>
