--- a/location.html
+++ b/location.html
@@ -19,12 +19,12 @@
       <a href="/" class="btn btn--location">Back to home</a>
       <img src="./assets/icon-arrow-left.svg" alt="">
     </div>
-    <div class="header__image-box">
+    <div class="header__image-box header__image-box--location">
       <p>
         <picture>
-          <source srcset="./assets/mobile/image-map.png" type="image/png" media="all and (max-width:500px)" />
-          <source srcset="./assets/mobile/image-map@2x.png" type="image/png" media="all and (max-width:755px)" />
-          <source srcset="./assets/desktop/image-map.png" type="image/png" media="all and (max-width:1440px)" />
+          <source srcset="./assets/mobile/image-map@2x.png" type="image/png" media="all and (max-width:550px)" />
+          <source srcset="./assets/tablet/image-map@2x.png" type="image/png" media="all and (min-width: 621px)" />
+          <source srcset="./assets/desktop/image-map@2x.png" type="image/png" media="all and (min-width:850px)" />
           <img src="./assets/desktop/image-map@2x.png" alt="">
         </picture>
       </p>
@@ -53,13 +53,13 @@
   </div>
 
   <footer class="footer bg-accent">
-    <h3 class="title footer--title">Modern Art Gallery</h3>
+    <h3 class="title footer--title">Modern <br> Art Gallery</h3>
     <p class="text footer--text">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to
       9pm. Find us at 99 King Street, Newport, USA</p>
     <div class="footer__social-links">
-      <span><img src="./assets/icon-facebook.svg" alt=""></span>
-      <span><img src="./assets/icon-instagram.svg" alt=""></span>
-      <span><img src="./assets/icon-twitter.svg" alt=""></span>
+      <span><a target="_blank" href="https://facebook.com"><img src="./assets/icon-facebook.svg" alt=""></a></span>
+      <span><a target="_blank" href="https://instagram.com"><img src="./assets/icon-instagram.svg" alt=""></a></span>
+      <span><a target="_blank" href="https://twitter.com"><img src="./assets/icon-twitter.svg" alt=""></a></span>
     </div>
   </footer>
   <!-- Back to Home
