Working on Desktop view

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
 
   <header class="header">
+    <div class="header__desktop-art">
+    </div>
     <div class="header__image-box">
       <p>
         <picture>
